--- a/latex/txt/3Results.tex
+++ b/latex/txt/3Results.tex
@@ -24,10 +24,18 @@ Training and validation loss curves were tracked during training. The trends wer
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.32\textwidth]{results/experiment1_depth_loss_curves.png}
-    \includegraphics[width=0.32\textwidth]{results/experiment2_width_loss_curves.png}
-    \includegraphics[width=0.32\textwidth]{results/experiment3_heads_loss_curves.png}
-    \caption{Training and validation loss curves for depth, width, and head sweeps.}
+    \includegraphics[width=0.32\textwidth]{results/experiment1_depth_train_loss_curves.png}
+    \includegraphics[width=0.32\textwidth]{results/experiment2_width_train_loss_curves.png}
+    \includegraphics[width=0.32\textwidth]{results/experiment3_heads_train_loss_curves.png}
+    \caption{Training loss curves for depth, width, and head sweeps.}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.32\textwidth]{results/experiment1_depth_val_loss_curves.png}
+    \includegraphics[width=0.32\textwidth]{results/experiment2_width_val_loss_curves.png}
+    \includegraphics[width=0.32\textwidth]{results/experiment3_heads_val_loss_curves.png}
+    \caption{Validation loss curves for depth, width, and head sweeps.}
 \end{figure}
 
 \begin{figure}[H]
