latex setup change

--- a/latex/main.tex
+++ b/latex/main.tex
@@ -6,6 +6,9 @@
 \usepackage{amsmath}
 \usepackage{hyperref}
 \usepackage{float}
+\usepackage{enumitem}
+
+\setlist[itemize]{itemsep=0pt, topsep=2pt}
 
 \title{Exploring Language Model Scaling Behavior Using nanoGPT and TinyStories}
 \author{Lars Moen Storvik \\ INF-3600 – Generative Artificial Intelligence}
